vlib/v/checker/tests/interface_implicit_str_char_err.vv
interface Stringy {
	str() string
}

fn take(v Stringy) {
	_ = v
}

fn main() {
	take(char(91))
}
